--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
     </div>
     <audio id="win-sound" loop>
-        <source src="sounds/win-sound'.mp3" type="audio/mpeg">
+        <source src="win-sound'.mp3" type="audio/mpeg">
     </audio>
     <audio id="click-sound">
-        <source src="sounds/click-sound.mp3" type="audio/mpeg">
+        <source src="click-sound.mp3" type="audio/mpeg">
     </audio>
     <audio id="bomb-sound">
-        <source src="sounds/bomb-sound.mp3" type="audio/mpeg">
+        <source src="bomb-sound.mp3" type="audio/mpeg">
     </audio>
    <br>
    <button id="flag-button"> 🚩</button>
